--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,5 +3,15 @@ on: push
 jobs:
   greeting:
     runs-on: ubuntu-latest
+    container: rootproject/root-conda:6.18.04
     steps:
       - run: echo hello world
+
+  build_skim:
+    runs-on: ubuntu-latest
+    steps:
+      - name: build
+      - run: |
+         COMPILER=$(root-config --cxx)
+         $COMPILER -g -O3 -Wall -Wextra -Wpedantic -o skim skim.cxx
+
