--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ jobs:
     runs-on: ubuntu-latest
     container: rootproject/root-conda:6.18.04
     steps:
+      - name: checkout repository
+      - uses: actions/checkout@v2
       - name: build
       - run: |
          COMPILER=$(root-config --cxx)
