--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,9 +10,10 @@ jobs:
     container: rootproject/root-conda:6.18.04
     steps:
       - name: checkout repository
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
       - name: build
-      - run: |
+        run: |
          COMPILER=$(root-config --cxx)
-         $COMPILER -g -O3 -Wall -Wextra -Wpedantic -o skim skim.cxx
+         FLAGS=$(root-config --cflags --libs)
+         $COMPILER -g -O3 -Wall -Wextra -Wpedantic -o skim skim.cxx $FLAGS
 
